--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./components/buttons";
 @import "./components/dropdown-menu";
 @import "./components/favorite-heart";
+@import "./components/filters-sidebar";
 @import "./components/popup";
 @import "./components/recipe-brief";
 @import "./components/search-bar";
@@ -29,3 +30,4 @@
 @import "./layout/nav";
 
 @import "./pages/home";
+@import "./pages/recipes";
