--- a/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
@@ -2,50 +2,39 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<br />
-<div class="row">
+@*<div class="row">
     <div class="col-6">
         <h2 class="text-primary">List of recipes:</h2>
     </div>
     <div class="col-6 text-right">
         <a class="btn btn-primary text-light" asp-action="Upsert">Create New Recipe</a>
     </div>
-</div>
+</div>*@
 
-<br />
-<div class="p-4 border rounded">
-    @if (Model.Count > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Category
-                    </th>
-                    <th>
-                        Details
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var recipe in Model)
-                {
-                <tr>
-                    <td width="20%">@recipe.Name</td>
-                    <td width="10%">@recipe.RecipeCategory.Title</td>
-                    <td width="10%">
-                        <a asp-action="Details" asp-route-id="@recipe.Id">Read more</a>
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>There are no recipes in the database!</p>
-    }
+
+<div class="recipes-page ck-container">
+    <h1 class="h1">Przepisy</h1>
+    <div class="recipes-page__main">
+        <div class="recipes-page__sidebar">
+            <partial name="_FiltersSidebar" />
+        </div>
+        <div class="recipes-page__grid">
+            @if (Model.Count > 0)
+            {
+                <div class="product-grid">
+                    @foreach (var recipe in Model)
+                    {
+                        <a asp-action="Details" asp-route-id="@recipe.Id" class="product-grid__item">
+                            <img src="~/assets/placeholders/chicken.jpg" />
+                            <span>@recipe.Name</span>
+                        </a>
+                    }
+                </div>
+            }
+            else
+            {
+                <p>There are no recipes in the database!</p>
+            }
+        </div>
+    </div>
 </div>
