--- a/Cookify.Web/wwwroot/scss/base/_typography.scss
+++ b/Cookify.Web/wwwroot/scss/base/_typography.scss
@@ -32,6 +32,8 @@ a{
   font-weight: bold;
   font-size: 48px;
   line-height: 59px;
+  margin-bottom: 60px;
+  text-align: center;
 }
 
 .h2 {
@@ -41,6 +43,12 @@ a{
     font-size: 32px;
     color: $orange;
     position: relative;
+}
+
+.h3{
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 33px;
 }
 
 .mobile-h2{
