--- a/Cookify.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Cookify.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -36,7 +36,7 @@
             {
                 <div class="form-group">
                     <label asp-for="Input.Role"></label>
-                    @Html.DropDownListFor(m=>m.Input.RoleList, Model.Input.RoleList,"-Please select a role", new { @class = "form-control" })
+                    @Html.DropDownListFor(m=>m.Input.Role, Model.Input.RoleList,"-Please select a role", new { @class = "form-control" })
                 </div>
             }
             <button type="submit" class="btn btn-primary">Register</button>
