--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -20,10 +20,10 @@
 @import "./components/search-bar";
 @import "./components/table";
 @import "./components/title-card";
-@import "./components/_user-panels.scss";
-@import "./components/_home-header.scss";
-@import "./components/_category-panels.scss";
-@import "./components/_product-grid.scss";
+@import "./components/user-panels";
+@import "./components/home-header";
+@import "./components/category-panels";
+@import "./components/product-grid";
 
 @import "./layout/admin-header";
 @import "./layout/container";
