--- a/Cookify.Web/wwwroot/scss/components/_product-grid.scss
+++ b/Cookify.Web/wwwroot/scss/components/_product-grid.scss
@@ -8,10 +8,10 @@
         border-radius: 5px;
         overflow: hidden;
 
-        &:hover {
+/*        &:hover {
             & img {
                 transform: scale(.95);
             }
-        }
+        }*/
     }
 }
