--- a/Cookify.Web/Areas/User/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Home/Index.cshtml
@@ -38,28 +38,68 @@
 </div>
 
 <h2 class="h2">Popularne przepisy</h2>
-<div class="product-grid ck-container">
-    @for (int i = 0; i < 4; i++) {  
-    <a href="#" class="product-grid__item">
-        <img src="~/assets/placeholders/chicken.jpg"/>
-        <div class="favorite-heart">
-            <img class ="heart-empty" src="~/assets/icons/components/heart-orange.svg"/>
-            <img class ="heart-filled" src="~/assets/icons/components/heart-filled.svg"/>
+<div class="product-grid">
+    @for (int i = 0; i < 4; i++)
+    {
+        <div class="product-grid__item">
+
+            <div class="product-grid__item__img-con">
+                <img src="~/assets/placeholders/chicken.jpg" alt="" class="product-grid__item__img">
+                <div class="favorite-heart">
+                    <img class="heart-empty" src="~/assets/icons/components/heart-orange.svg" alt="">
+                    <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" alt="">
+                </div>
+            </div>
+
+            <div class="product-grid__item__desc">
+                <div class="product-grid__item__desc__title">Pieczony kurczak z bukietem warzyw</div>
+                <div class="product-grid__item__desc__info">
+
+                    <div class="product-grid__item__desc__info__item">
+                        <img src="~/assets/icons/components/time.svg" alt="">
+                        <span>20 min</span>
+                    </div>
+                    <div class="product-grid__item__desc__info__item">
+                        <img src="~/assets/icons/components/time.svg" alt="">
+                        <span>Łatwy</span>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
-    </a>
     }
 </div>
 
 <h2 class="h2">Najnowsze przepisy</h2>
-<div class="product-grid ck-container">
-    @for (int i = 0; i < 4; i++)
-    {
-    <a href="#" class="product-grid__item">
-        <img src="~/assets/placeholders/chicken.jpg" />
-        <div class="favorite-heart">
-            <img class="heart-empty" src="~/assets/icons/components/heart-orange.svg" />
-            <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" />
+<div class="product-grid">
+    @for (int i = 0; i < 4; i++) { 
+        <div class="product-grid__item">
+
+            <div class="product-grid__item__img-con">
+                <img src="~/assets/placeholders/chicken.jpg" alt="" class="product-grid__item__img">
+                <div class="favorite-heart">
+                    <img class="heart-empty" src="~/assets/icons/components/heart-orange.svg" alt="">
+                    <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" alt="">
+                </div>
+            </div>
+
+            <div class="product-grid__item__desc">
+                <div class="product-grid__item__desc__title">Pieczony kurczak z bukietem warzyw</div>
+                <div class="product-grid__item__desc__info">
+
+                    <div class="product-grid__item__desc__info__item">
+                        <img src="~/assets/icons/components/time.svg" alt="">
+                        <span>20 min</span>
+                    </div>
+                    <div class="product-grid__item__desc__info__item">
+                        <img src="~/assets/icons/components/time.svg" alt="">
+                        <span>Łatwy</span>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
-    </a>
     }
 </div>
