--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -59,10 +59,10 @@
                 }
                 else
                 {
-                    <a asp-area="User" asp-controller="Account" asp-action="Login" class="ck-dropdown-menu__link">
+                    <a asp-area="Identity" asp-page="/Account/Login" class="ck-dropdown-menu__link">
                         Zaloguj się
                     </a>
-                    <a asp-area="User" asp-controller="Account" asp-action="Register" class="ck-dropdown-menu__link">
+                    <a asp-area="Identity" asp-page="/Account/Register" class="ck-dropdown-menu__link">
                         Zarejestruj się
                     </a>
                 }
