--- a/Cookify.Web/Areas/User/Views/Account/Login.cshtml
+++ b/Cookify.Web/Areas/User/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
     <div class="ck-form__info">Nie masz konta? <a asp-area="User" asp-controller="Account" asp-action="Register" class="text-orange">Zarejestruj się</a></div>
 
     <input class="bordered-input" placeholder="Adres e-mail" />
-    <input class="bordered-input" placeholder="Hasło" />
+    <input class="bordered-input" placeholder="Hasło" type="password"/>
 
     <button class="ck-btn">Zaloguj się</button>
 
