--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -32,6 +32,7 @@
 @import "./layout/admin-header";
 @import "./layout/container";
 @import "./layout/nav";
+@import "./layout/footer";
 
 @import "./pages/home";
 @import "./pages/recipes";
