--- a/Cookify.Web/Views/Shared/_Layout.cshtml
+++ b/Cookify.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     @RenderBody()
 
     <footer class="footer">
-        <p>&copy; Cookify 2021 - Wszelkie prawa zastrzeżone - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+        <p>&copy; Cookify 2021 - Wszelkie prawa zastrzeżone</p>
     </footer>
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
@@ -27,4 +27,3 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-@*<footer class="border-top footer text-muted">*@
