--- a/Cookify.Web/wwwroot/scss/components/_user-panels.scss
+++ b/Cookify.Web/wwwroot/scss/components/_user-panels.scss
@@ -17,9 +17,15 @@
             color: $white;
         }
 
+        & img{
+          width: 100%;
+          object-fit: cover;
+          @include transition;
+        }
+
         &:hover {
             & img {
-                transform: scale(.95);
+                opacity: .9;
             }
         }
     }
