--- a/Cookify.Web/wwwroot/scss/layout/_footer.scss
+++ b/Cookify.Web/wwwroot/scss/layout/_footer.scss
@@ -1,17 +1,17 @@
 .footer{
-position: fixed;
-left: 0px;
-bottom: 0px;
-width: 100%;
-height: 50px;
-text-align: center;
-padding: 16px;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding: 16px;
 
-font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 22px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
 
-background-color: $white;
+  background-color: $white;
 }
